src/test_parser2.output
State 333 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT_NODE $end

    1 PRI_EXPR: T_IDENTIFIER
    2         | T_NUMBER
    3         | T_STRING
    4         | T_LBRACKET EXPR T_RBRACKET

    5 POSTFIX_EXPR: PRI_EXPR
    6             | POSTFIX_EXPR T_LSQBRACKET EXPR T_RSQBRACKET
    7             | POSTFIX_EXPR T_LBRACKET T_RBRACKET
    8             | POSTFIX_EXPR T_LBRACKET ARG_EXPR_LIST T_RBRACKET
    9             | POSTFIX_EXPR T_DOT T_IDENTIFIER
   10             | POSTFIX_EXPR T_POINT T_IDENTIFIER
   11             | POSTFIX_EXPR T_INCR
   12             | POSTFIX_EXPR T_DECR

   13 ARG_EXPR_LIST: ASSIGN_EXPR
   14              | ARG_EXPR_LIST T_COMM ASSIGN_EXPR

   15 UNARY_EXPR: POSTFIX_EXPR
   16           | T_INCR UNARY_EXPR
   17           | T_DECR UNARY_EXPR
   18           | UNARY_OP CAST_EXPR
   19           | T_SIZEOF UNARY_EXPR
   20           | T_SIZEOF T_LBRACKET TYPE_NAME T_RBRACKET

   21 UNARY_OP: T_BWAND
   22         | T_STAR
   23         | T_PLUS
   24         | T_MINUS
   25         | T_TILDE
   26         | T_NOT

   27 CAST_EXPR: UNARY_EXPR
   28          | T_LBRACKET TYPE_NAME T_RBRACKET CAST_EXPR

   29 MULTIPLICATIVE_EXPR: CAST_EXPR
   30                    | MULTIPLICATIVE_EXPR T_STAR CAST_EXPR
   31                    | MULTIPLICATIVE_EXPR T_DIV CAST_EXPR
   32                    | MULTIPLICATIVE_EXPR T_MOD CAST_EXPR

   33 ADDITIVE_EXPR: MULTIPLICATIVE_EXPR
   34              | ADDITIVE_EXPR T_PLUS MULTIPLICATIVE_EXPR
   35              | ADDITIVE_EXPR T_MINUS MULTIPLICATIVE_EXPR

   36 SHFT_EXPR: ADDITIVE_EXPR
   37          | SHFT_EXPR T_LSHIFT ADDITIVE_EXPR
   38          | SHFT_EXPR T_RSHIFT ADDITIVE_EXPR

   39 REL_EXPR: SHFT_EXPR
   40         | REL_EXPR T_LT SHFT_EXPR
   41         | REL_EXPR T_GT SHFT_EXPR
   42         | REL_EXPR T_LTE SHFT_EXPR
   43         | REL_EXPR T_GTE SHFT_EXPR

   44 EQ_EXPR: REL_EXPR
   45        | EQ_EXPR T_EQ REL_EXPR
   46        | EQ_EXPR T_NEQ REL_EXPR

   47 AND_EXPR: EQ_EXPR
   48         | AND_EXPR T_BWAND EQ_EXPR

   49 EXCL_OR_EXPR: AND_EXPR
   50             | EXCL_OR_EXPR T_BWXOR AND_EXPR

   51 INCL_OR_EXPR: EXCL_OR_EXPR
   52             | INCL_OR_EXPR T_OR EXCL_OR_EXPR

   53 LOGI_AND_EXPR: INCL_OR_EXPR
   54              | LOGI_AND_EXPR T_AND INCL_OR_EXPR

   55 LOGI_OR_EXPR: LOGI_AND_EXPR
   56             | LOGI_OR_EXPR T_BWOR LOGI_AND_EXPR

   57 COND_EXPR: LOGI_OR_EXPR
   58          | LOGI_OR_EXPR T_QBEGIN EXPR T_QEND COND_EXPR

   59 ASSIGN_EXPR: COND_EXPR
   60            | UNARY_EXPR ASSIGN_OP ASSIGN_EXPR

   61 ASSIGN_OP: T_ASSIGN
   62          | T_EQMULT
   63          | T_EQDIV
   64          | T_EQMOD
   65          | T_EQPLUS
   66          | T_EQMINUS
   67          | T_EQLSHIFT
   68          | T_EQRSHIFT
   69          | T_EQBWAND
   70          | T_EQEXPONENT
   71          | T_EQBWOR

   72 EXPR: ASSIGN_EXPR
   73     | EXPR T_COMM ASSIGN_EXPR

   74 CONST_EXPR: COND_EXPR

   75 DECL: DECL_SPECS T_SEMI
   76     | DECL_SPECS INIT_DECLARATOR_LIST T_SEMI

   77 DECL_SPECS: STRGE_CLASS_SPEC
   78           | STRGE_CLASS_SPEC DECL_SPECS
   79           | TYPE_SPEC
   80           | TYPE_SPEC DECL_SPECS
   81           | TYPE_QUAL
   82           | TYPE_QUAL DECL_SPECS

   83 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   84                     | INIT_DECLARATOR_LIST T_COMM INIT_DECLARATOR

   85 INIT_DECLARATOR: DECLARATOR
   86                | DECLARATOR T_ASSIGN INIT

   87 STRGE_CLASS_SPEC: T_TYPEDEF
   88                 | T_EXTERN
   89                 | T_STATIC
   90                 | T_AUTO
   91                 | T_REGISTER

   92 TYPE_SPEC: T_VOID
   93          | T_CHAR
   94          | T_SHORT
   95          | T_INT
   96          | T_LONG
   97          | T_FLOAT
   98          | T_DOUBLE
   99          | T_SIGNED
  100          | T_UNSIGNED
  101          | STRUCT_OR_UNION_SPEC
  102          | ENUM_SPEC
  103          | T_TYPE_NAME

  104 STRUCT_OR_UNION_SPEC: STRUCT_OR_UNION T_IDENTIFIER T_LCBRACKET STRUCT_DECL_LIST T_RCBRACKET
  105                     | STRUCT_OR_UNION T_LCBRACKET STRUCT_DECL_LIST T_RCBRACKET
  106                     | STRUCT_OR_UNION T_IDENTIFIER

  107 STRUCT_OR_UNION: T_STRUCT
  108                | T_UNION

  109 STRUCT_DECL_LIST: STRUCT_DECL
  110                 | STRUCT_DECL_LIST STRUCT_DECL

  111 STRUCT_DECL: SPEC_QUAL_LIST STRUCT_DECLARATOR_LIST T_SEMI

  112 SPEC_QUAL_LIST: TYPE_SPEC SPEC_QUAL_LIST
  113               | TYPE_SPEC
  114               | TYPE_QUAL SPEC_QUAL_LIST
  115               | TYPE_QUAL

  116 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
  117                       | STRUCT_DECLARATOR_LIST T_COMM STRUCT_DECLARATOR

  118 STRUCT_DECLARATOR: DECLARATOR
  119                  | T_QEND CONST_EXPR
  120                  | DECLARATOR T_QEND CONST_EXPR

  121 ENUM_SPEC: T_ENUM T_LCBRACKET ENUM_LIST T_RCBRACKET
  122          | T_ENUM T_IDENTIFIER T_LCBRACKET ENUM_LIST T_RCBRACKET
  123          | T_ENUM T_IDENTIFIER

  124 ENUM_LIST: ENUM
  125          | ENUM_LIST T_COMM ENUM

  126 ENUM: T_IDENTIFIER
  127     | T_IDENTIFIER T_ASSIGN CONST_EXPR

  128 TYPE_QUAL: T_CONST
  129          | T_VOLATILE

  130 DECLARATOR: POINTER DIREC_DECLARATOR
  131           | DIREC_DECLARATOR

  132 DIREC_DECLARATOR: T_IDENTIFIER
  133                 | T_LBRACKET DECLARATOR T_RBRACKET
  134                 | DIREC_DECLARATOR T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  135                 | DIREC_DECLARATOR T_LSQBRACKET T_RSQBRACKET
  136                 | DIREC_DECLARATOR T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  137                 | DIREC_DECLARATOR T_LBRACKET ID_LIST T_RBRACKET
  138                 | DIREC_DECLARATOR T_LBRACKET T_RBRACKET

  139 POINTER: T_STAR
  140        | T_STAR TYPE_QUAL_LIST
  141        | T_STAR POINTER
  142        | T_STAR TYPE_QUAL_LIST POINTER

  143 TYPE_QUAL_LIST: TYPE_QUAL
  144               | TYPE_QUAL_LIST TYPE_QUAL

  145 PARAM_TYPE_LIST: PARAM_LIST
  146                | PARAM_LIST T_COMM T_ELL

  147 PARAM_LIST: PARAM_DECL
  148           | PARAM_LIST T_COMM PARAM_DECL

  149 PARAM_DECL: DECL_SPECS DECLARATOR
  150           | DECL_SPECS ABST_DECLARATOR
  151           | DECL_SPECS

  152 ID_LIST: T_IDENTIFIER
  153        | ID_LIST T_COMM T_IDENTIFIER

  154 TYPE_NAME: SPEC_QUAL_LIST
  155          | SPEC_QUAL_LIST ABST_DECLARATOR

  156 ABST_DECLARATOR: POINTER
  157                | DIR_ABST_DECLARATOR
  158                | POINTER DIR_ABST_DECLARATOR

  159 DIR_ABST_DECLARATOR: T_LBRACKET ABST_DECLARATOR T_RBRACKET
  160                    | T_LSQBRACKET T_RSQBRACKET
  161                    | T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  162                    | DIR_ABST_DECLARATOR T_LSQBRACKET T_RSQBRACKET
  163                    | DIR_ABST_DECLARATOR T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  164                    | T_LBRACKET T_RBRACKET
  165                    | T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  166                    | DIR_ABST_DECLARATOR T_LBRACKET T_RBRACKET
  167                    | DIR_ABST_DECLARATOR T_LBRACKET PARAM_TYPE_LIST T_RBRACKET

  168 INIT: ASSIGN_EXPR
  169     | T_LCBRACKET INIT_LIST T_RCBRACKET
  170     | T_LCBRACKET INIT_LIST T_COMM T_RCBRACKET

  171 INIT_LIST: INIT
  172          | INIT_LIST T_COMM INIT

  173 STMT: LBL_STMT
  174     | COMP_STMT
  175     | EXPR_STMT
  176     | SELEC_STMT
  177     | ITER_STMT
  178     | JMP_STMT

  179 LBL_STMT: T_IDENTIFIER T_QEND STMT
  180         | T_CASE CONST_EXPR T_QEND STMT
  181         | T_DEFAULT T_QEND STMT

  182 COMP_STMT: T_LCBRACKET T_RCBRACKET
  183          | T_LCBRACKET STMT_LIST T_RCBRACKET
  184          | T_LCBRACKET DECL_LIST T_RCBRACKET
  185          | T_LCBRACKET DECL_LIST STMT_LIST T_RCBRACKET

  186 DECL_LIST: DECL
  187          | DECL_LIST DECL

  188 STMT_LIST: STMT
  189          | STMT_LIST STMT

  190 EXPR_STMT: T_SEMI
  191          | EXPR T_SEMI

  192 SELEC_STMT: T_IF T_LBRACKET EXPR T_RBRACKET STMT
  193           | T_IF T_LBRACKET EXPR T_RBRACKET STMT T_ELSE STMT
  194           | T_SWITCH T_LBRACKET EXPR T_RBRACKET STMT

  195 ITER_STMT: T_WHILE T_LBRACKET EXPR T_RBRACKET STMT
  196          | T_DO STMT T_WHILE T_LBRACKET EXPR T_RBRACKET T_SEMI
  197          | T_FOR T_LBRACKET EXPR_STMT EXPR_STMT T_RBRACKET STMT
  198          | T_FOR T_LBRACKET EXPR_STMT EXPR_STMT EXPR T_RBRACKET STMT

  199 JMP_STMT: T_GOTO T_IDENTIFIER T_SEMI
  200         | T_CONTINUE T_SEMI
  201         | T_BREAK T_SEMI
  202         | T_RETURN T_SEMI
  203         | T_RETURN EXPR T_SEMI

  204 ROOT_NODE: EXT_DECL
  205          | ROOT_NODE EXT_DECL

  206 EXT_DECL: FUNC_DEF
  207         | DECL

  208 FUNC_DEF: DECL_SPECS DECLARATOR DECL_LIST COMP_STMT
  209         | DECL_SPECS DECLARATOR COMP_STMT
  210         | DECLARATOR DECL_LIST COMP_STMT
  211         | DECLARATOR COMP_STMT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUMBER (258) 2
T_IDENTIFIER (259) 1 9 10 104 106 122 123 126 127 132 152 153 179 199
T_STRING (260) 3
T_CONST (261) 128
T_PLUS (262) 23 34
T_MINUS (263) 24 35
T_DIV (264) 31
T_STAR (265) 22 30 139 140 141 142
T_MOD (266) 32
T_POINT (267) 10
T_INCR (268) 11 16
T_DECR (269) 12 17
T_LSHIFT (270) 37
T_RSHIFT (271) 38
T_EQ (272) 45
T_NEQ (273) 46
T_GT (274) 41
T_GTE (275) 43
T_LT (276) 40
T_LTE (277) 42
T_NOT (278) 26
T_AND (279) 54
T_OR (280) 52
T_BWXOR (281) 50
T_BWAND (282) 21 48
T_BWOR (283) 56
T_EQMULT (284) 62
T_EQDIV (285) 63
T_EQMOD (286) 64
T_EQPLUS (287) 65
T_EQMINUS (288) 66
T_EQLSHIFT (289) 67
T_EQRSHIFT (290) 68
T_ASSIGN (291) 61 86 127
T_EQEXPONENT (292) 70
T_EQBWOR (293) 71
T_EQBWAND (294) 69
T_TYPE_NAME (295) 103
T_SIZEOF (296) 19 20
T_SEMI (297) 75 76 111 190 191 196 199 200 201 202 203
T_QBEGIN (298) 58
T_QEND (299) 58 119 120 179 180 181
T_DOT (300) 9
T_COMM (301) 14 73 84 117 125 146 148 153 170 172
T_TILDE (302) 25
T_TYPEDEF (303) 87
T_EXTERN (304) 88
T_STATIC (305) 89
T_AUTO (306) 90
T_REGISTER (307) 91
T_CHAR (308) 93
T_SHORT (309) 94
T_INT (310) 95
T_LONG (311) 96
T_SIGNED (312) 99
T_UNSIGNED (313) 100
T_FLOAT (314) 97
T_DOUBLE (315) 98
T_VOLATILE (316) 129
T_VOID (317) 92
T_STRUCT (318) 107
T_UNION (319) 108
T_ENUM (320) 121 122 123
T_ELL (321) 146
T_LBRACKET (322) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192
    193 194 195 196 197 198
T_RBRACKET (323) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192
    193 194 195 196 197 198
T_LSQBRACKET (324) 6 134 135 160 161 162 163
T_RSQBRACKET (325) 6 134 135 160 161 162 163
T_LCBRACKET (326) 104 105 121 122 169 170 182 183 184 185
T_RCBRACKET (327) 104 105 121 122 169 170 182 183 184 185
T_CASE (328) 180
T_DEFAULT (329) 181
T_IF (330) 192 193
T_ELSE (331) 193
T_SWITCH (332) 194
T_WHILE (333) 195 196
T_DO (334) 196
T_FOR (335) 197 198
T_GOTO (336) 199
T_CONTINUE (337) 200
T_BREAK (338) 201
T_RETURN (339) 202 203


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
PRI_EXPR (86)
    on left: 1 2 3 4, on right: 5
POSTFIX_EXPR (87)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
ARG_EXPR_LIST (88)
    on left: 13 14, on right: 8 14
UNARY_EXPR (89)
    on left: 15 16 17 18 19 20, on right: 16 17 19 27 60
UNARY_OP (90)
    on left: 21 22 23 24 25 26, on right: 18
CAST_EXPR (91)
    on left: 27 28, on right: 18 28 29 30 31 32
MULTIPLICATIVE_EXPR (92)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
ADDITIVE_EXPR (93)
    on left: 33 34 35, on right: 34 35 36 37 38
SHFT_EXPR (94)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
REL_EXPR (95)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
EQ_EXPR (96)
    on left: 44 45 46, on right: 45 46 47 48
AND_EXPR (97)
    on left: 47 48, on right: 48 49 50
EXCL_OR_EXPR (98)
    on left: 49 50, on right: 50 51 52
INCL_OR_EXPR (99)
    on left: 51 52, on right: 52 53 54
LOGI_AND_EXPR (100)
    on left: 53 54, on right: 54 55 56
LOGI_OR_EXPR (101)
    on left: 55 56, on right: 56 57 58
COND_EXPR (102)
    on left: 57 58, on right: 58 59 74
ASSIGN_EXPR (103)
    on left: 59 60, on right: 13 14 60 72 73 168
ASSIGN_OP (104)
    on left: 61 62 63 64 65 66 67 68 69 70 71, on right: 60
EXPR (105)
    on left: 72 73, on right: 4 6 58 73 191 192 193 194 195 196 198
    203
CONST_EXPR (106)
    on left: 74, on right: 119 120 127 134 161 163 180
DECL (107)
    on left: 75 76, on right: 186 187 207
DECL_SPECS (108)
    on left: 77 78 79 80 81 82, on right: 75 76 78 80 82 149 150 151
    208 209
INIT_DECLARATOR_LIST (109)
    on left: 83 84, on right: 76 84
INIT_DECLARATOR (110)
    on left: 85 86, on right: 83 84
STRGE_CLASS_SPEC (111)
    on left: 87 88 89 90 91, on right: 77 78
TYPE_SPEC (112)
    on left: 92 93 94 95 96 97 98 99 100 101 102 103,
    on right: 79 80 112 113
STRUCT_OR_UNION_SPEC (113)
    on left: 104 105 106, on right: 101
STRUCT_OR_UNION (114)
    on left: 107 108, on right: 104 105 106
STRUCT_DECL_LIST (115)
    on left: 109 110, on right: 104 105 110
STRUCT_DECL (116)
    on left: 111, on right: 109 110
SPEC_QUAL_LIST (117)
    on left: 112 113 114 115, on right: 111 112 114 154 155
STRUCT_DECLARATOR_LIST (118)
    on left: 116 117, on right: 111 117
STRUCT_DECLARATOR (119)
    on left: 118 119 120, on right: 116 117
ENUM_SPEC (120)
    on left: 121 122 123, on right: 102
ENUM_LIST (121)
    on left: 124 125, on right: 121 122 125
ENUM (122)
    on left: 126 127, on right: 124 125
TYPE_QUAL (123)
    on left: 128 129, on right: 81 82 114 115 143 144
DECLARATOR (124)
    on left: 130 131, on right: 85 86 118 120 133 149 208 209 210 211
DIREC_DECLARATOR (125)
    on left: 132 133 134 135 136 137 138, on right: 130 131 134 135
    136 137 138
POINTER (126)
    on left: 139 140 141 142, on right: 130 141 142 156 158
TYPE_QUAL_LIST (127)
    on left: 143 144, on right: 140 142 144
PARAM_TYPE_LIST (128)
    on left: 145 146, on right: 136 165 167
PARAM_LIST (129)
    on left: 147 148, on right: 145 146 148
PARAM_DECL (130)
    on left: 149 150 151, on right: 147 148
ID_LIST (131)
    on left: 152 153, on right: 137 153
TYPE_NAME (132)
    on left: 154 155, on right: 20 28
ABST_DECLARATOR (133)
    on left: 156 157 158, on right: 150 155 159
DIR_ABST_DECLARATOR (134)
    on left: 159 160 161 162 163 164 165 166 167, on right: 157 158
    162 163 166 167
INIT (135)
    on left: 168 169 170, on right: 86 171 172
INIT_LIST (136)
    on left: 171 172, on right: 169 170 172
STMT (137)
    on left: 173 174 175 176 177 178, on right: 179 180 181 188 189
    192 193 194 195 196 197 198
LBL_STMT (138)
    on left: 179 180 181, on right: 173
COMP_STMT (139)
    on left: 182 183 184 185, on right: 174 208 209 210 211
DECL_LIST (140)
    on left: 186 187, on right: 184 185 187 208 210
STMT_LIST (141)
    on left: 188 189, on right: 183 185 189
EXPR_STMT (142)
    on left: 190 191, on right: 175 197 198
SELEC_STMT (143)
    on left: 192 193 194, on right: 176
ITER_STMT (144)
    on left: 195 196 197 198, on right: 177
JMP_STMT (145)
    on left: 199 200 201 202 203, on right: 178
ROOT_NODE (146)
    on left: 204 205, on right: 0 205
EXT_DECL (147)
    on left: 206 207, on right: 204 205
FUNC_DEF (148)
    on left: 208 209 210 211, on right: 206


state 0

    0 $accept: . ROOT_NODE $end

    T_IDENTIFIER  shift, and go to state 1
    T_CONST       shift, and go to state 2
    T_STAR        shift, and go to state 3
    T_TYPE_NAME   shift, and go to state 4
    T_TYPEDEF     shift, and go to state 5
    T_EXTERN      shift, and go to state 6
    T_STATIC      shift, and go to state 7
    T_AUTO        shift, and go to state 8
    T_REGISTER    shift, and go to state 9
    T_CHAR        shift, and go to state 10
    T_SHORT       shift, and go to state 11
    T_INT         shift, and go to state 12
    T_LONG        shift, and go to state 13
    T_SIGNED      shift, and go to state 14
    T_UNSIGNED    shift, and go to state 15
    T_FLOAT       shift, and go to state 16
    T_DOUBLE      shift, and go to state 17
    T_VOLATILE    shift, and go to state 18
    T_VOID        shift, and go to state 19
    T_STRUCT      shift, and go to state 20
    T_UNION       shift, and go to state 21
    T_ENUM        shift, and go to state 22
    T_LBRACKET    shift, and go to state 23

    DECL                  go to state 24
    DECL_SPECS            go to state 25
    STRGE_CLASS_SPEC      go to state 26
    TYPE_SPEC             go to state 27
    STRUCT_OR_UNION_SPEC  go to state 28
    STRUCT_OR_UNION       go to state 29
    ENUM_SPEC             go to state 30
    TYPE_QUAL             go to state 31
    DECLARATOR            go to state 32
    DIREC_DECLARATOR      go to state 33
    POINTER               go to state 34
    ROOT_NODE             go to state 35
    EXT_DECL              go to state 36
    FUNC_DEF              go to state 37


state 1

  132 DIREC_DECLARATOR: T_IDENTIFIER .

    $default  reduce using rule 132 (DIREC_DECLARATOR)


state 2

  128 TYPE_QUAL: T_CONST .

    $default  reduce using rule 128 (TYPE_QUAL)


state 3

  139 POINTER: T_STAR .
  140        | T_STAR . TYPE_QUAL_LIST
  141        | T_STAR . POINTER
  142        | T_STAR . TYPE_QUAL_LIST POINTER

    T_CONST     shift, and go to state 2
    T_STAR      shift, and go to state 3
    T_VOLATILE  shift, and go to state 18

    $default  reduce using rule 139 (POINTER)

    TYPE_QUAL       go to state 38
    POINTER         go to state 39
    TYPE_QUAL_LIST  go to state 40


state 4

  103 TYPE_SPEC: T_TYPE_NAME .

    $default  reduce using rule 103 (TYPE_SPEC)


state 5

   87 STRGE_CLASS_SPEC: T_TYPEDEF .

    $default  reduce using rule 87 (STRGE_CLASS_SPEC)


state 6

   88 STRGE_CLASS_SPEC: T_EXTERN .

    $default  reduce using rule 88 (STRGE_CLASS_SPEC)


state 7

   89 STRGE_CLASS_SPEC: T_STATIC .

    $default  reduce using rule 89 (STRGE_CLASS_SPEC)


state 8

   90 STRGE_CLASS_SPEC: T_AUTO .

    $default  reduce using rule 90 (STRGE_CLASS_SPEC)


state 9

   91 STRGE_CLASS_SPEC: T_REGISTER .

    $default  reduce using rule 91 (STRGE_CLASS_SPEC)


state 10

   93 TYPE_SPEC: T_CHAR .

    $default  reduce using rule 93 (TYPE_SPEC)


state 11

   94 TYPE_SPEC: T_SHORT .

    $default  reduce using rule 94 (TYPE_SPEC)


state 12

   95 TYPE_SPEC: T_INT .

    $default  reduce using rule 95 (TYPE_SPEC)


state 13

   96 TYPE_SPEC: T_LONG .

    $default  reduce using rule 96 (TYPE_SPEC)


state 14

   99 TYPE_SPEC: T_SIGNED .

    $default  reduce using rule 99 (TYPE_SPEC)


state 15

  100 TYPE_SPEC: T_UNSIGNED .

    $default  reduce using rule 100 (TYPE_SPEC)


state 16

   97 TYPE_SPEC: T_FLOAT .

    $default  reduce using rule 97 (TYPE_SPEC)


state 17

   98 TYPE_SPEC: T_DOUBLE .

    $default  reduce using rule 98 (TYPE_SPEC)


state 18

  129 TYPE_QUAL: T_VOLATILE .

    $default  reduce using rule 129 (TYPE_QUAL)


state 19

   92 TYPE_SPEC: T_VOID .

    $default  reduce using rule 92 (TYPE_SPEC)


state 20

  107 STRUCT_OR_UNION: T_STRUCT .

    $default  reduce using rule 107 (STRUCT_OR_UNION)


state 21

  108 STRUCT_OR_UNION: T_UNION .

    $default  reduce using rule 108 (STRUCT_OR_UNION)


state 22

  121 ENUM_SPEC: T_ENUM . T_LCBRACKET ENUM_LIST T_RCBRACKET
  122          | T_ENUM . T_IDENTIFIER T_LCBRACKET ENUM_LIST T_RCBRACKET
  123          | T_ENUM . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 41
    T_LCBRACKET   shift, and go to state 42


state 23

  133 DIREC_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_IDENTIFIER  shift, and go to state 1
    T_STAR        shift, and go to state 3
    T_LBRACKET    shift, and go to state 23

    DECLARATOR        go to state 43
    DIREC_DECLARATOR  go to state 33
    POINTER           go to state 34


state 24

  207 EXT_DECL: DECL .

    $default  reduce using rule 207 (EXT_DECL)


state 25

   75 DECL: DECL_SPECS . T_SEMI
   76     | DECL_SPECS . INIT_DECLARATOR_LIST T_SEMI
  208 FUNC_DEF: DECL_SPECS . DECLARATOR DECL_LIST COMP_STMT
  209         | DECL_SPECS . DECLARATOR COMP_STMT

    T_IDENTIFIER  shift, and go to state 1
    T_STAR        shift, and go to state 3
    T_SEMI        shift, and go to state 44
    T_LBRACKET    shift, and go to state 23

    INIT_DECLARATOR_LIST  go to state 45
    INIT_DECLARATOR       go to state 46
    DECLARATOR            go to state 47
    DIREC_DECLARATOR      go to state 33
    POINTER               go to state 34


state 26

   77 DECL_SPECS: STRGE_CLASS_SPEC .
   78           | STRGE_CLASS_SPEC . DECL_SPECS

    T_CONST      shift, and go to state 2
    T_TYPE_NAME  shift, and go to state 4
    T_TYPEDEF    shift, and go to state 5
    T_EXTERN     shift, and go to state 6
    T_STATIC     shift, and go to state 7
    T_AUTO       shift, and go to state 8
    T_REGISTER   shift, and go to state 9
    T_CHAR       shift, and go to state 10
    T_SHORT      shift, and go to state 11
    T_INT        shift, and go to state 12
    T_LONG       shift, and go to state 13
    T_SIGNED     shift, and go to state 14
    T_UNSIGNED   shift, and go to state 15
    T_FLOAT      shift, and go to state 16
    T_DOUBLE     shift, and go to state 17
    T_VOLATILE   shift, and go to state 18
    T_VOID       shift, and go to state 19
    T_STRUCT     shift, and go to state 20
    T_UNION      shift, and go to state 21
    T_ENUM       shift, and go to state 22

    $default  reduce using rule 77 (DECL_SPECS)

    DECL_SPECS            go to state 48
    STRGE_CLASS_SPEC      go to state 26
    TYPE_SPEC             go to state 27
    STRUCT_OR_UNION_SPEC  go to state 28
    STRUCT_OR_UNION       go to state 29
    ENUM_SPEC             go to state 30
    TYPE_QUAL             go to state 31


state 27

   79 DECL_SPECS: TYPE_SPEC .
   80           | TYPE_SPEC . DECL_SPECS

    T_CONST      shift, and go to state 2
    T_TYPE_NAME  shift, and go to state 4
    T_TYPEDEF    shift, and go to state 5
    T_EXTERN     shift, and go to state 6
    T_STATIC     shift, and go to state 7
    T_AUTO       shift, and go to state 8
    T_REGISTER   shift, and go to state 9
    T_CHAR       shift, and go to state 10
    T_SHORT      shift, and go to state 11
    T_INT        shift, and go to state 12
    T_LONG       shift, and go to state 13
    T_SIGNED     shift, and go to state 14
    T_UNSIGNED   shift, and go to state 15
    T_FLOAT      shift, and go to state 16
    T_DOUBLE     shift, and go to state 17
    T_VOLATILE   shift, and go to state 18
    T_VOID       shift, and go to state 19
    T_STRUCT     shift, and go to state 20
    T_UNION      shift, and go to state 21
    T_ENUM       shift, and go to state 22

    $default  reduce using rule 79 (DECL_SPECS)

    DECL_SPECS            go to state 49
    STRGE_CLASS_SPEC      go to state 26
    TYPE_SPEC             go to state 27
    STRUCT_OR_UNION_SPEC  go to state 28
    STRUCT_OR_UNION       go to state 29
    ENUM_SPEC             go to state 30
    TYPE_QUAL             go to state 31


state 28

  101 TYPE_SPEC: STRUCT_OR_UNION_SPEC .

    $default  reduce using rule 101 (TYPE_SPEC)


state 29

  104 STRUCT_OR_UNION_SPEC: STRUCT_OR_UNION . T_IDENTIFIER T_LCBRACKET STRUCT_DECL_LIST T_RCBRACKET
  105                     | STRUCT_OR_UNION . T_LCBRACKET STRUCT_DECL_LIST T_RCBRACKET
  106                     | STRUCT_OR_UNION . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 50
    T_LCBRACKET   shift, and go to state 51


state 30

  102 TYPE_SPEC: ENUM_SPEC .

    $default  reduce using rule 102 (TYPE_SPEC)


state 31

   81 DECL_SPECS: TYPE_QUAL .
   82           | TYPE_QUAL . DECL_SPECS

    T_CONST      shift, and go to state 2
    T_TYPE_NAME  shift, and go to state 4
    T_TYPEDEF    shift, and go to state 5
    T_EXTERN     shift, and go to state 6
    T_STATIC     shift, and go to state 7
    T_AUTO       shift, and go to state 8
    T_REGISTER   shift, and go to state 9
    T_CHAR       shift, and go to state 10
    T_SHORT      shift, and go to state 11
    T_INT        shift, and go to state 12
    T_LONG       shift, and go to state 13
    T_SIGNED     shift, and go to state 14
    T_UNSIGNED   shift, and go to state 15
    T_FLOAT      shift, and go to state 16
    T_DOUBLE     shift, and go to state 17
    T_VOLATILE   shift, and go to state 18
    T_VOID       shift, and go to state 19
    T_STRUCT     shift, and go to state 20
    T_UNION      shift, and go to state 21
    T_ENUM       shift, and go to state 22

    $default  reduce using rule 81 (DECL_SPECS)

    DECL_SPECS            go to state 52
    STRGE_CLASS_SPEC      go to state 26
    TYPE_SPEC             go to state 27
    STRUCT_OR_UNION_SPEC  go to state 28
    STRUCT_OR_UNION       go to state 29
    ENUM_SPEC             go to state 30
    TYPE_QUAL             go to state 31


state 32

  210 FUNC_DEF: DECLARATOR . DECL_LIST COMP_STMT
  211         | DECLARATOR . COMP_STMT

    T_CONST      shift, and go to state 2
    T_TYPE_NAME  shift, and go to state 4
    T_TYPEDEF    shift, and go to state 5
    T_EXTERN     shift, and go to state 6
    T_STATIC     shift, and go to state 7
    T_AUTO       shift, and go to state 8
    T_REGISTER   shift, and go to state 9
    T_CHAR       shift, and go to state 10
    T_SHORT      shift, and go to state 11
    T_INT        shift, and go to state 12
    T_LONG       shift, and go to state 13
    T_SIGNED     shift, and go to state 14
    T_UNSIGNED   shift, and go to state 15
    T_FLOAT      shift, and go to state 16
    T_DOUBLE     shift, and go to state 17
    T_VOLATILE   shift, and go to state 18
    T_VOID       shift, and go to state 19
    T_STRUCT     shift, and go to state 20
    T_UNION      shift, and go to state 21
    T_ENUM       shift, and go to state 22
    T_LCBRACKET  shift, and go to state 53

    DECL                  go to state 54
    DECL_SPECS            go to state 55
    STRGE_CLASS_SPEC      go to state 26
    TYPE_SPEC             go to state 27
    STRUCT_OR_UNION_SPEC  go to state 28
    STRUCT_OR_UNION       go to state 29
    ENUM_SPEC             go to state 30
    TYPE_QUAL             go to state 31
    COMP_STMT             go to state 56
    DECL_LIST             go to state 57


state 33

  131 DECLARATOR: DIREC_DECLARATOR .
  134 DIREC_DECLARATOR: DIREC_DECLARATOR . T_LSQBRACKET CONST_EXPR T_RSQBRACKET
  135                 | DIREC_DECLARATOR . T_LSQBRACKET T_RSQBRACKET
  136                 | DIREC_DECLARATOR . T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  137                 | DIREC_DECLARATOR . T_LBRACKET ID_LIST T_RBRACKET
  138                 | DIREC_DECLARATOR . T_LBRACKET T_RBRACKET

    T_LBRACKET    shift, and go to state 58
    T_LSQBRACKET  shift, and go to state 59

    $default  reduce using rule 131 (DECLARATOR)


state 34

  130 DECLARATOR: POINTER . DIREC_DECLARATOR

    T_IDENTIFIER  shift, and go to state 1
    T_LBRACKET    shift, and go to state 23

    DIREC_DECLARATOR  go to state 60


state 35

    0 $accept: ROOT_NODE . $end
  205 ROOT_NODE: ROOT_NODE . EXT_DECL
